syntax = "proto3";

option csharp_namespace = "OTPChat";

package encrypt;

service EncryptService {
  rpc Encrypt (PlainText) returns (CipherText) {}
} 

message PlainText {
  string text = 1;
  string algorithm = 2;
  optional string key = 3;
}

message CipherText {
  string text = 1;
  string key = 2;
}
